--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,10 @@
 /* CSS Entry Point */
-* { padding: 0; margin: 0; }
+* { 
+	padding: 0; 
+	margin: 0; 
+}
 
-canvas { background: #eee; display: block; margin: 0 auto; }
+canvas { 
+	background: black; 
+	display: block; 
+	margin: 0 auto; }
